# aws-step-functions-circleci

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.py  pyproject.toml  requirements.txt  state_machine_definition.json
.circleci/: config.yml
aws_lambdas/s3_trigger/: app_s3_trigger.py
aws_lambdas/task_one/: app_task_one.py
aws_lambdas/task_two/: app_task_two.py
scripts/: create_roles.sh  zip_lambdas.sh
tests/: test_s3_trigger.py  test_task_one.py  test_task_two.py
